Added sounds on keyclick

--- a/DrumKit/drumkit.html
+++ b/DrumKit/drumkit.html
@@ -12,15 +12,15 @@
     <div class="keys-list">
         <div data-key="65" class="key">
             <kbd>A</kbd>
-            <span class="sound">Clap</span>
+            <span class="sound">Boom</span>
         </div>
         <div data-key="83" class="key">
             <kbd>S</kbd>
-            <span class="sound">Drum</span>
+            <span class="sound">Clap</span>
         </div>
         <div data-key="68" class="key">
             <kbd>D</kbd>
-            <span class="sound">Guitar</span>
+            <span class="sound">Ride</span>
         </div>
         <div data-key="70" class="key">
             <kbd>F</kbd>
@@ -31,8 +31,8 @@
             <span class="sound">Kick</span>
         </div>
     </div>
-    <audio data-key="65"  src=""></audio>
-    <audio data-key="83"  src=""></audio>
-    <audio data-key="68"  src=""></audio>
+    <audio data-key="65"  src="./boom.wav"></audio>
+    <audio data-key="83"  src="./clap.wav"></audio>
+    <audio data-key="68"  src="./ride.wav"></audio>
 </body>
 </html>
